Add React frontend
